# HackNotts2017

./: README.md  doc.md
scripts/: fuck.sh  service.yml
src/fetch/: example.py  fetch.sh  just_fetch.sh  torrc
src/main/: Cargo.toml
src/main/migrations/2017-10-28-140636_users/: up.sql
src/main/migrations/2017-10-28-221838_blobs/: up.sql
src/main/src/: lib.rs  main.rs  models.rs
src/pushcontrol/src/: admin.py  pushcontrol.py
