[package]
name = "main"
version = "0.1.0"
authors = ["a <>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "*"
r2d2 = "*"
ring-pwhash = "*"
uuid = { version = "0.4", features = ["serde", "v4"] }

